Fix alignment of unread badge in thread list (#7582)

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -63,7 +63,8 @@ $left-gutter: 64px;
         height: 8px;
         border-radius: 50%;
         right: -16px;
-        top: 7px;
+        top: 6px;
+        left: auto;
     }
 
     &[data-shape=thread_list][data-notification=total]::before {
